Fixed z-index layer of center button

--- a/gnhome-server/nodejs/site/static/style/main.css
+++ b/gnhome-server/nodejs/site/static/style/main.css
@@ -444,7 +444,7 @@ form textarea
     width: 8vh;
     height: 8vh;
     font-size: 6vh;
-    z-index: 5000;
+    z-index: 999;
 }
 
 @media (orientation: landscape)
